After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 675119 - unable to build the latest version due to two bugs
unable to build the latest version due to two bugs
Status: RESOLVED FIXED
Product: cogl
Classification: Platform
Component: general
git master
Other Linux
: Normal major
: ---
Assigned To: Cogl maintainer(s)
Cogl maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-04-30 07:57 UTC by Jack River
Modified: 2012-04-30 11:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch for typedef (446 bytes, patch)
2012-04-30 07:57 UTC, Jack River
none Details | Review
patch for introspection (997 bytes, patch)
2012-04-30 07:57 UTC, Jack River
none Details | Review

Description Jack River 2012-04-30 07:57:15 UTC
Created attachment 213079 [details] [review]
patch for typedef

I'm using Gentoo x86_64 and I found two bugs while compiling cogl-9999(aka cogl2)
here I provided two patches for these bugs separately, may not be good ones, but I wish you guys can check it out.

Here is the error 1:
  CC     cogl-snippet.lo
  CC     cogl-poll.lo
  CC     cogl-memory-stack.lo
  CC     cogl-magazine.lo
  CC     cogl-glib-source.lo
  CC     cogl-xlib-renderer.lo
  CC     cogl-xlib.lo
  CC     cogl-texture-pixmap-x11.lo
  CC     cogl-winsys-glx.lo
./cogl-memory-stack.c:79:3: error: redefinition of typedef 'CoglMemoryStack'
./cogl-memory-stack-private.h:35:33: note: previous declaration of 'CoglMemoryStack' was here

and the patch for it is named typedef.patch

Here is the error 2:
cogl-offscreen.h:65: Warning: Cogl: cogl_offscreen_new_to_texture: return value: Invalid non-constant return of bare structure or union; register as boxed type or (skip)
cogl-texture.h:359: Warning: Cogl: cogl_texture_get_data: argument data: Unresolved type: 'uint8_t*'
cogl-texture.h:384: Warning: Cogl: cogl_texture_set_region: argument data: Unresolved type: 'uint8_t*'
cogl-texture.h:484: Warning: Cogl: cogl_texture_new_from_sub_texture: return value: Invalid non-constant return of bare structure or union; register as boxed type or (skip)
cogl-texture.h:115: Warning: Cogl: cogl_texture_new_with_size: return value: Invalid non-constant return of bare structure or union; register as boxed type or (skip)
cogl-texture.h:141: Warning: Cogl: cogl_texture_new_from_file: return value: Invalid non-constant return of bare structure or union; register as boxed type or (skip)
cogl-texture.h:151: Warning: Cogl: cogl_texture_new_from_data: argument data: Unresolved type: 'uint8_t*'
cogl-texture.h:171: Warning: Cogl: cogl_texture_new_from_data: return value: Invalid non-constant return of bare structure or union; register as boxed type or (skip)
cogl-texture.h:205: Warning: Cogl: cogl_texture_new_from_foreign: return value: Invalid non-constant return of bare structure or union; register as boxed type or (skip)
cogl-texture.h:227: Warning: Cogl: cogl_texture_new_from_bitmap: return value: Invalid non-constant return of bare structure or union; register as boxed type or (skip)
cogl-texture.h:504: Warning: Cogl: cogl_texture_ref: return value: Missing (transfer) annotation
  GICOMP Cogl-2.0.gir
error parsing file Cogl-2.0.gir: Line 22, character 31: The attribute 'name' on the element 'type' must be specified

and the patch for this is named cogl.gir.patch
Comment 1 Jack River 2012-04-30 07:57:38 UTC
Created attachment 213080 [details] [review]
patch for introspection

patch for introspection
Comment 2 Neil Roberts 2012-04-30 11:18:11 UTC
I've pushed the first patch here:

http://git.gnome.org/browse/cogl/commit/?id=75cd425a48e0fc403bf88eace212a6d37b65df11

I don't think we'd want to use the second patch because Cogl is trying to avoid using the glib types and instead uses the C99 standard types so that the code is foreign to non-gnome developers. This seems to upset the gobject-introspection scanner. I have filed a bug about that here:

https://bugzilla.gnome.org/show_bug.cgi?id=674796

Thanks for the patches.
Comment 3 Jack River 2012-04-30 11:44:46 UTC
(In reply to comment #2)
> I've pushed the first patch here:
> 
> http://git.gnome.org/browse/cogl/commit/?id=75cd425a48e0fc403bf88eace212a6d37b65df11
> 
> I don't think we'd want to use the second patch because Cogl is trying to avoid
> using the glib types and instead uses the C99 standard types so that the code
> is foreign to non-gnome developers. This seems to upset the
> gobject-introspection scanner. I have filed a bug about that here:
> 
> https://bugzilla.gnome.org/show_bug.cgi?id=674796
> 
> Thanks for the patches.

Thanks for reviewing, pleasure to help